[project]
name = "dataset-merger"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.6.0",
    "hf-xet>=1.1.10",
    "huggingface-hub[cli,torch]>=0.34.4",
    # "lerobot>=0.3.3",
    "lerobot",
    "polars>=1.33.1",
]

[tool.uv.sources]
lerobot = { path = "lerobot", editable = true }

[dependency-groups]
dev = [
    "altair>=5.5.0",
    "duckdb>=1.3.2",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "openai>=1.107.2",
    "pytest>=8.4.2",
    "python-lsp-server>=1.13.1",
    "ruff>=0.13.0",
    "sqlglot>=27.14.0",
    "vegafusion>=2.0.2",
    "vl-convert-python>=1.8.0",
    "websockets>=15.0.1",
]
